--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div class="row header">
+        <h1 class="text-center">Friends I Haven't Met Yet</h1>
+    </div>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -58,6 +61,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script src="scripts/controllers/Title.js"></script>
+        <script src="scripts/controllers/Login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
