Improved Register-page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,6 +63,7 @@
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/Title.js"></script>
         <script src="scripts/controllers/Login.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <script src="scripts/services/User.js"></script>
         <script src="scripts/controllers/UserInterest.js"></script>
         <!-- endbuild -->
