--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,6 +60,7 @@ body {
 	}
 }
 
+
 .login {
 	width: 50%;
 	margin-left:auto;
@@ -73,5 +74,30 @@ body {
 	}
 	button {
 		margin-top: 1em;
+	}
+}
+
+.interests {
+	.interest {
+		.name {
+			margin-bottom: 0;
+		}
+
+		.info {
+			padding-left: 2em;
+
+			.event {
+				border-style: solid;
+				border-width: 1px;
+				border-color: #B5B5B5;
+				padding: 0.25em;
+				margin: 1em;
+			}
+
+		}
+
+		border-bottom-style: dashed;
+		border-bottom-width: 1px;
+		border-bottom-color: #B5B5B5;
 	}
 }
