--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,8 +1,9 @@
-<div class="header" ng-controller="NavbarCtrl">
-  <ul class="nav nav-pills pull-right">
-    <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-        <a ng-href="{{item.link}}">{{item.title}}</a>
-    </li>
-  </ul>
-  <h3 class="text-muted">someJamApp</h3>
+<div ng-controller="NavbarCtrl">
+
+    <ul class="nav nav-tabs">
+		<li ng-repeat="item in menu" >
+			<a ng-href="{{item.link}}">{{item.title}}</a>
+		</li>
+	</ul>
+
 </div>
