Signed-off-by: Janne Vuorela <jannevv@gmail.com>

--- a/app/views/partials/title.html
+++ b/app/views/partials/title.html
@@ -1,4 +1,9 @@
+<div class="front-logo">
 
+<div class="row header" ng-class="withTop">
+        <a href="#/"><h1 class="text-center">Getogether</h1></a>
+        Find and gather with friends who share your passion.
+    </div>
 
 <div class="jumbotron search">
 	<form>
@@ -33,4 +38,5 @@
 			<button class="btn btn-lg btn-primary btn-block" type="button">Login</button>
 		</a>
 	</div>
+</div>
 </div>
