--- a/app/views/index.html
+++ b/app/views/index.html
@@ -63,6 +63,8 @@
         <script src="scripts/services/User.js"></script>
         <script src="scripts/controllers/UserInterest.js"></script>
         <script src="scripts/controllers/NavBar.js"></script>
+        <script src="scripts/controllers/Meetups.js"></script>
+        <script src="scripts/controllers/CreateEvent.js"></script>
         <!-- endbuild -->
 </body>
 </html>
