--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -6,7 +6,7 @@
         <input type="password" id="password" placeholder="password" ng-model="password" /><br />
         <input type="password" id="password-again" placeholder="Password again" ng-model="password2" /><br />
         
-        <button ng-click="register()">Register {{test}}</button>
+        <button ng-click="register()">Register</button>
         
     </form>
 </div>
