Fixed redirection to event details from meetups

--- a/app/views/partials/meetups.html
+++ b/app/views/partials/meetups.html
@@ -3,7 +3,7 @@
 <div class="jumbotron meetups">
 	<h2>Your meetups</h2>
 	<div class="meetup">
-		<a ng-repeat="event in events" href="#/event/{{event._id}}">
+		<a ng-repeat="event in events" href="#/user/eventdetails/{{event._id}}">
 			<div class="event">
 				<strong class="name">{{event.name}}</strong>
 				<br/>
