--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,26 @@ html {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
+
+input {
+	color: black;
+	padding-right: 10px;
+	padding-left: 10px ;
+	padding-top: 1px;
+	padding-bottom: 1px;
+	margin-bottom: 0;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	border: none;
+
+
+
+	&:focus {
+		outline: none;
+	}
+}
+
 .container  {
     width: 100%;
     height: 100%;
@@ -266,42 +286,110 @@ html {
 	}
 }
 
+.login-container {
+    background-color: #D7E0DC;
+    width: 100%;
+    height: 100%;
+    .header {
+		padding-top: 15%;
+		color: #737373;
+		margin-bottom: 1em;
+    }
+	.login {
+		.search-query {
+			color: black;
+			padding-right: 10px;
+			padding-left: 10px ;
+			padding-top: 5px;
+			padding-bottom: 5px;
+			margin-top: 1em;
+			-webkit-border-radius: 10px;
+			-moz-border-radius: 10px;
+			border-radius: 10px;
+			border: none;
 
-.login {
-	width: 50%;
-	margin-left:auto;
-	margin-right:auto;
-	label {
-		width: 20%;
-		margin-top: 1em;
-	}
-	input {
-		width: 80%;
-	}
-	button {
-		margin-top: 1em;
+	
+
+			&:focus {
+				outline: none;
+			}
+		}
+
+		.help-block {
+			padding-left: 2em;
+		}
+
+		.btn {
+			border: none;
+			font-weight: bold;
+			width: 9em;
+			line-height: 1em;
+		}
+
+		width: 15%;
+		min-width: 200px;
+
+		margin: 0 auto;
+		input {
+			width: 100%;
+		}
+		button {
+			margin-top: 1em;
+		}
 	}
 }
 
 .interests {
-
+	padding: 0;
+	border: 1px solid #ADADAD;
+	h2 {
+		font-size: 3.5em;
+		font-weight: 600;
+		line-height: 1em;
+	}
+	.top {
+		padding: 10px 10px;
+		padding-left: 50px;
+	}
 	.search-box {
 		float: left;
-		width: 90%;
+		width: 45%;
 		font-size: 1.30em;
 		margin-right: 2%;
+		color: #ADADAD;
+		border: 1px solid #ADADAD;
 	}
 
 	.search-button {
 		width: 8%;
 	}
-
+	
 
 	.interest {
+		padding-left: 50px;
+		
+
+
+
 		.name {
 			margin-bottom: 0;
+			font-size: 3em;
+			font-weight: 300;
+			padding: 0.5em 0;
+			float: left;
 		}
 
+		.count {
+			float: right;
+			line-height: 4.7em;
+			font-size: 1.5em;
+			padding-right: 5em;
+		}
+
+		&:hover {
+			background-color: #ADADAD;
+			cursor: pointer;
+		}
 		.info {
 			padding-left: 2em;
 			padding-bottom: 1em;
@@ -317,19 +405,83 @@ html {
 					font-size: 1.32em;
 				}
 
-				&:hover {
-					background-color: #B5B5B5;
-				}
+				
 			}
 
 			.create-event-button {
 			}
 
 		}
-
-		border-bottom-style: dashed;
+		border-bottom-style: solid;
 		border-bottom-width: 1px;
-		border-bottom-color: #B5B5B5;
+		border-bottom-color: #ADADAD;
+		clear: both;
+		overflow: auto;
+	}
+
+	.opened {
+		color: #FF1D25;
+
+		.name {
+			font-weight: 600;
+			text-decoration: underline;
+		}
+
+		.expanded {
+			width: 100%;
+			float: left;
+			a {
+				color: #FF1D25 !important;
+				overflow: auto;
+			}
+			.event {
+				
+				.eventName {
+					font-size: 1.9em;
+					font-weight: 900;
+					text-transform: uppercase;
+					margin-right: 0.25em;
+				}
+
+				.evetDate {
+					font-size: 1.5em;
+					font-size: 1em;
+					font-weight: 300;
+				}
+
+				&:hover {
+					.eventName {
+						text-decoration: underline;
+					}
+				}
+
+				margin-top: 0.5em;
+				margin-bottom: 0.5em;
+				width: 75%;
+				float: left;
+			}
+
+			padding-bottom: 0.5em;
+			padding-right: 1em;
+
+			.CreateOwn {
+				width: 190px;
+				.btn {
+					margin-top: 10px;
+					font-weight: bold;
+					text-transform: uppercase;
+				}
+			}
+		}
+
+		&:hover {
+			background-color: #ffffff;
+			cursor: auto;
+		}
+
+	}
+	.notSelected {
+		color: #B5B5B5;
 	}
 
 	.suggestion {
@@ -348,6 +500,32 @@ html {
 
 	}
 }
+
+.imageHeadInclude {
+	height: 25%;
+	min-height: 200px;
+	.imageHead {
+		width: 100%;
+		height: 100%;
+		background-image:url('../images/front-bg.jpg') ;
+	    background-repeat:no-repeat;
+		background-position: center center;
+
+		.header {
+			padding-top: 1em;
+		}
+	}
+}
+
+
+.main-container {
+	width: 45%;
+	min-width: 800px;
+	margin: 0 auto;
+}
+
+
+
 
 .meetups {
 	.meetup {
