--- a/app/views/partials/meetups.html
+++ b/app/views/partials/meetups.html
@@ -1,18 +1,16 @@
-
+<div ng-include="'partials/imagehead'" class="imageHeadInclude"></div>
+<div class="main-container">
 <div ng-include="'partials/navbar'"></div>
-<div class="jumbotron meetups">
-	<h2>Your meetups</h2>
-	<div class="meetup">
-		<a ng-repeat="event in events" href="#/event/{{event._id}}">
-			<div class="event">
-				<strong class="name">{{event.name}}</strong>
-				<br/>
-				<strong>Date: </strong><small>{{event.date}}</small>
-				<br/>
-				<strong>Description: </strong><small>{{event.description}}</small>
-				<br/>
-				<strong>Users attending: </strong><small>{{event.users.length}}</small>
-			</div>
-		</a>
+	<div class="meetups">
+		<h2>Your meetups</h2>
+		<div class="meetup">
+			<a ng-repeat="event in events" href="#/user/eventdetails/{{event._id}}">
+					<div class="event" ng-hide="containsThisUser(event.users)">
+						<strong class="eventName">{{event.name}}</strong> More >>
+						<br/>
+						<div class="evetDate">{{event.date}}</div>
+					</div>
+				</a>
+		</div>
 	</div>
 </div>
