--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -1,12 +1,17 @@
-<div class="jumbotron" ng-controller="RegisterCtrl">
-    <h1>Register</h1>
-    
-    <form novalidate class="register-form">
-        <input type="text" id="username" placeholder="username" ng-model="username" /><br />
-        <input type="password" id="password" placeholder="password" ng-model="password" /><br />
-        <input type="password" id="password-again" placeholder="Password again" ng-model="password2" /><br />
-        
-        <button ng-click="register()">Register {{test}}</button>
-        
-    </form>
+
+<div class="login-container" ng-controller="RegisterCtrl">
+	<div class="row header">
+        <h1><a href="#/"  class="text-center">Getogether</a></h1>
+        Find and gather with friends who share your passion.
+    </div>
+	<div class="login">
+		<form class="form-horizontal">
+			<fieldset>
+				<input type="text" class="search-query" ng-model="username" placeholder="Username">
+				<input type="password" class="search-query" ng-model="password" placeholder="Password">
+				<input type="password" class="search-query" ng-model="password2" placeholder="Password again">
+				 <button class="btn btn-lg btn-success" ng-click="register()">Register</button>
+			</fieldset>
+		</form>
+	</div>
 </div>
