--- a/app/views/partials/userinterest.html
+++ b/app/views/partials/userinterest.html
@@ -18,20 +18,7 @@
 		<div class="interest" ng-hide="(searchInterest.name === undefined || searchInterest.events.length !== eventObjects.length)">
 			<div class="interest suggestion">
 				<h4 class="name">{{searchInterest.name}}</h4>
-				<div class="info">
-					<small>{{searchInterest.userCount}} other people are interested.</small>
-					<a ng-repeat="event in eventObjects" href="#" ng-click="goToDetails(event._id)">
-						<div class="event" ng-hide="containsThisUser(event.users)">
-							<strong class="name">{{event.name}}</strong>
-							<br/>
-							<strong>Date: </strong><small>{{event.date}}</small>
-							<br/>
-							<strong>Description: </strong><small>{{event.description}}</small>
-							<br/>
-							<strong>Users attending: </strong><small>{{event.users.length}}</small>
-						</div>
-					</a>
-				</div>
+			<div class="count"><strong>{{searchInterest.userCount}}</strong> liked it</div>
 			</div>
 		</div>
 		<div class="interest" ng-repeat="interest in interests" ng-class="{opened: (targetInterest === interest._id), notSelected: (targetInterest !== null && targetInterest !== interest._id) }" ng-click="interestClicked(interest)">
